# Drone_Navigation

./: README.md
maneuver/: Dockerfile  README.md  docker-compose.yaml
maneuver/drone_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
maneuver/drone_moveit_config/config/: drone.srdf  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
maneuver/drone_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
maneuver/gz_worlds/: labirinth.sdf  no_more_prius.sdf
maneuver/maneuver_autopilot/: CMakeLists.txt  package.xml
maneuver/maneuver_bringup/: CMakeLists.txt  package.xml
maneuver/maneuver_bringup/config/: bridge.yaml
maneuver/maneuver_bringup/description/: robot.urdf
maneuver/maneuver_bringup/launch/: bringup.launch.py
maneuver/maneuver_bringup/urdf/: drone.urdf
maneuver/maneuver_path_planner/: CMakeLists.txt  package.xml
maneuver/maneuver_path_planner/config/: controllers.yaml  hybrid_planner_params.yaml  local_planer_params.yaml  ompl_planning.yaml  path_planer.yaml
maneuver/maneuver_path_planner/launch/: RRTstar.launch.py
maneuver/maneuver_path_planner/rviz/: moveit_config.rviz
maneuver/maneuver_path_planner/src/: octomap_publisher.cpp
maneuver/maneuver_slam/: CMakeLists.txt  package.xml
maneuver/maneuver_slam/launch/: slam_server_launch.py
maneuver/ofboard_planning/: package.xml  setup.cfg  setup.py
maneuver/ofboard_planning/ofboard_planning/: offboard_waypoints.py
